# mutagen-helper

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Pipfile  README.md  mutagen-helper.spec  pyproject.toml  requirements.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
mutagen_helper/: __main__.py  __version__.py  manager.py  parser.py  scanner.py  wrapper.py
mutagen_helper/test/: conftest.py  test_manager.py  test_parser.py  test_scanner.py  test_wrapper.py
mutagen_helper/test/data/: mutagen-problems.json  mutagen.json  ret.json  test1.yml  test3.yml  test5.yml  test_auto.yml  test_auto_advanced.yml  test_auto_ignore_project_configuration.yml  test_parser_expandvars.yml  test_parser_expandvars_expected.yml  test_parser_expandvars_with_defaults.yml  test_parser_projects.yml  test_parser_projects_expected.json  test_parser_with_sessions.yml  test_parser_without_sessions.yml
